# utande-billing

./: .dockerignore  .firebaserc  .gitignore  Dockerfile  build.sh  package-lock.json  package.json  render.yaml  start.sh
.business/: clients.json  invoices.json
.memory/conversations/: default_1a5c9872.json
.plugins/: plugins.json
backend/: backup.sh  package-lock.json  package.json
backend/prisma/: schema.postgres.prisma  schema.prisma  seed.ts
backend/src/: index.ts
chatbot/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  __init__.py  advanced_features.py  agent_system.py  app.py  business_suite.py  chatbot.py  code_generator.py  file_processors.py  hr_manager.py  knowledge_base.py  math_module.py  memory_system.py  opencode_features.py  personal_assistant.py  plugin_system.py  proposals.py  pyproject.toml  qa_module.py  reasoning_engine.py  recommendation_engine.py  reports.py  requirements.txt  security_system.py  setup.py  support_tickets.py  voice_module.py  workflow_automation.py
chatbot/.github/: PULL_REQUEST_TEMPLATE.md
chatbot/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
ekhaya-fc/: app.py  config.py  init_db.py  requirements.txt  run.py
ekhaya-fc/models/: __init__.py  contact.py  document.py  fixture.py  gallery.py  league_table.py  match.py  news.py  notification.py  order.py  player.py  product.py  result.py  staff.py  transaction.py  user.py  video.py
ekhaya-fc/routes/: admin.py  (+18 more)
frontend/: index.html  package-lock.json  package.json
matchmalawi/: FIREBASE_SETUP.md  README.md  firebase.json  pubspec.yaml
(+192 files in other folders)
