[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "kastart"
version = "2.0.0"
description = "AI-powered business assistant for SMEs"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "KaStart", email = "your.email@example.com"}
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.scripts]
kastart = "chatbot:main"

[project.urls]
Homepage = "https://github.com/yourusername/kastart"
Repository = "https://github.com/yourusername/kastart"
Issues = "https://github.com/yourusername/kastart/issues"
